adicioando README e alterações no código

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,11 +1,12 @@
 header{
   display: flex;
   align-items: center;
+  color: white;
   justify-content: center;
   height: 9.5rem;
-  background-color: #E6E3DE;
+  background-color: #25221c;
 }
 h1{
-  background-color: #E6E3DE;
+  background-color: #25221c;
   font-size: 3rem;
 }
