--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -2,19 +2,22 @@ footer{
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #E6E3DE;
+  background-color: #25221c;
+  height: 50px;
+  margin-top: 30px;
   padding: 3px;
 }
 footer p{
   font-size: 20px;
-  background-color: #E6E3DE;
+  color: white;
+  background-color: #25221c;
 }
 footer a{
-  background-color: #E6E3DE;
+  background-color: #25221c;
   text-decoration: none;
-  color: black;
+  color: white;
   &:hover{
     font-size: 20px;
-    color: #666563;
+    color: #F2EEDA;
   }
 }
