--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,5 @@
 main{
-  display: flex;
-  // justify-content: space-around;
-  flex-direction: row;
-  // align-items: center;
-  height: 80vh;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 2rem;
 }
